--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,14 @@ CLINIC_PIN=0000
 # Only needed if we refactor backend to use Supabase REST client instead of SQLAlchemy.
 SUPABASE_URL=
 SUPABASE_SERVICE_ROLE_KEY=
+
+# OpenRouter (optional): AI-assisted intake scoring (non-diagnostic)
+# If OPENROUTER_API_KEY is set, /api/intake will use OpenRouter; otherwise it falls back to rules.
+OPENROUTER_API_KEY=
+OPENROUTER_MODEL=nvidia/nemotron-3-nano-30b-a3b:free
+
+# SMSMode (optional): outbound SMS notifications
+# Get your API key from SMSMode console, docs: https://dev.smsmode.com/sms
+SMSMODE_API_KEY=
+# Base URL for REST SMS API
+SMSMODE_BASE_URL=https://rest.smsmode.com
